--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,6 @@
     "tests"
   ],
   "dependencies": {
-    "eventEmitter": "~4.2.9"
+    "EventEmitter": "git://github.com/primus/EventEmitter3.git#master"
   }
 }
