--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tatty-screen",
-  "version": "1.2.0",
+  "version": "1.3.0-snapshot",
   "main": "dist/index.js",
   "authors": [
     "mattstyles <matt@veryfizzyjelly.com>"
