--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatty-screen",
-  "version": "1.2.0",
+  "version": "1.3.0-snapshot",
   "description": "ES6 green-screen teleprinter",
   "main": "dist/index.js",
   "scripts": {
