--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tatty-screen",
   "version": "1.3.0-snapshot",
   "description": "ES6 green-screen teleprinter",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "watch": "./build/watch.js",
     "build": "./build/build.js",
