--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "tatty-screen",
-  "version": "1.3.0-snapshot",
-  "main": "src/index.js",
+  "version": "1.3.0",
+  "main": "tatty-screen.js",
   "authors": [
     "mattstyles <matt@veryfizzyjelly.com>"
   ],
