--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "tatty-screen",
-  "version": "1.3.0-snapshot",
-  "main": "src/index.js",
+  "version": "1.4.0-snapshot",
+  "main": "tatty-screen.js",
   "authors": [
     "mattstyles <matt@veryfizzyjelly.com>"
   ],
@@ -19,9 +19,10 @@
     "bower_components",
     "test",
     "tests",
-    "dist/common",
+    "dist",
     "build",
-    "index.html"
+    "index.html",
+    "package.json"
   ],
   "dependencies": {
     "EventEmitter": "git://github.com/primus/EventEmitter3.git#master"
